styles/index.scss
@import 'vars', 'mobile', 'search', 'guilds', 'emoji';

html,
body {
  padding: 0;
  margin: 0;

  font-size: 18px;
  line-height: 1.5;
  font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI',
    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;

  background-color: $bg;
  color: $fg;
}

a {
  color: $white;
  text-decoration-line: none;

  &:hover {
    text-decoration-line: underline;
  }
}

h2 {
  margin: 1rem 0;
}

section {
  margin: 2rem 0;
}

.strong {
  font-weight: bold;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

main {
  max-width: ($guild-modal-width * $guild-modal-count) + 100px;
  margin: 1rem auto;
}

.button {
  background: $green;
  padding: 0.5em 1em;
  border-radius: 0.2rem;
}

a.button:hover {
  text-decoration: none;
}

.inline-icon {
  height: 0.8em;
  width: auto;
  margin: 0 0.05em 0 0.05em;
}

nav {
  display: flex;
  align-items: center;

  h1 {
    font-weight: 800;
    font-size: 1.5em;

    display: flex;

    img {
      display: block;
      margin-right: 0.5rem;
      width: 1.5em;
      height: 1.5em;
      border-radius: 100%;
    }
  }

  .links {
    margin-left: auto;
  }

  .links a {
    &:not(:last-child) {
      margin-right: 0.5em;
    }
  }
}

header {
  margin: 2em 0;
  text-align: center;
  font-size: 1.5rem;
}

